# dense_llm_latent_space_agent_test

./: .gitignore  AUGUST_6_ACCOMPLISHMENTS.md  CLAUDE.md  README.md  RESULTS_SUMMARY.md  RUN_REAL_MODEL.md  TESTING_PLAN.md  analyze_models_bytes.py  baseline_cot.py  baseline_react.py  batch_test.py  batch_test_results.json  demo_groq.py  demo_pipeline.py  demo_results.json  dense_cot.py  dense_edge.py  dense_lm.py  dense_lm_v2.py  dense_react.py  eval.py  eval_fair_comparison.py  eval_react.py  eval_react_simple.py  explain_how_it_works.py  hello.py  hf_dense_lm.py  mock_lm.py  mock_lm_simple_results.json  mock_lm_simple_test.py  mock_lm_test.py  mock_train.py  mock_train_results.json  mock_training_config.json  performance_test.py  performance_test_results.json  plansolve.py  pyproject.toml  run.py  run_real_qwen.py  (+17 more)
